<resources>
    <string name="app_name">Cats</string>
    <string name="settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="breed">Breed</string>
    <string name="category">Category</string>
    <string name="general">General</string>
    <string name="image_count">Number of images</string>
    <string name="share">Share</string>
    <string name="sharing_failed">The image could not be shared.</string>
    <string name="cat">cat</string>
    <string name="open" translatable="false">Open</string>
</resources>